# automata

./: .gitignore  LICENSE  README.md  pyproject.toml
ansible/: Dockerfile  README.md  basic.yml  docksible.sh  elasticsearch.yml  influxdb.yml  mongo-cluster.yml  mysql.yml  neo4j.yml  postgresql.yml  timescaledb.yml
ansible/roles/: README.md
ansible/roles/base/defaults/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/elasticsearch/: README.md
ansible/roles/elasticsearch/defaults/: main.yml
ansible/roles/elasticsearch/tasks/: main.yml
ansible/roles/elasticsearch/templates/: elasticsearch.conf  elasticsearch.yml
ansible/roles/influxdb/: README.md
ansible/roles/influxdb/defaults/: main.yml
ansible/roles/influxdb/tasks/: main.yml
ansible/roles/influxdb/templates/: influxdb.conf  influxdefault
ansible/roles/mongodb/: README.md
ansible/roles/mongodb/defaults/: main.yml
ansible/roles/mongodb/meta/: main.yml
ansible/roles/mongodb/tasks/: main.yml
ansible/roles/mongodb/templates/: mongo.conf
ansible/roles/mysql/tasks/: main.yml
ansible/roles/neo4j/: README.md
ansible/roles/neo4j/defaults/: main.yml
ansible/roles/neo4j/tasks/: main.yml
ansible/roles/neo4j/templates/: neo4j.conf.tmpl
ansible/roles/postgresql/defaults/: main.yml
dockers/buildsystem/: README.md
dockers/buildsystem/bazelbuilder/: Dockerfile.bazel
images/: README.md  aws_generic.pkr.hcl  generic.pkr.hcl
tools/: dockstitch.py
utils/: jsonhook.py
vagrants/: README.md
vagrants/ubuntu-16.04/: Vagrantfile
vagrants/ubuntu-20.04/: Vagrantfile
(+4 files in other folders)
